--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: 0.5.12+4
+  shared_preferences: 2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
