--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: 2.0.1
+  qrscan: ^0.2.22
 
 
   # The following adds the Cupertino Icons font to your application.
