--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   shared_preferences: 2.0.1
   qrscan: ^0.2.22
+  permission_handler: 5.1.0+2
 
 
   # The following adds the Cupertino Icons font to your application.
