--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   permission_handler: 5.1.0+2
   fluttertoast: ^7.1.8
   sqflite:
+  http:
 
 
   # The following adds the Cupertino Icons font to your application.
